<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.LoginActivity"
    android:background="@color/colorPrimaryLight">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:background="@drawable/loginbg"
        android:orientation="vertical"
        android:padding="30dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:layout_editor_absoluteX="0dp">

        <EditText
            android:id="@+id/loginId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:hint="User Id"
            android:textColor="@color/colorLightContext"
            android:inputType="number"
            android:paddingTop="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="20dp"/>

        <EditText
            android:id="@+id/loginPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Password"
            android:textColor="@color/colorLightContext"
            android:inputType="textPassword"
            android:paddingTop="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="20dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sign In"
                android:textColor="@color/colorHeading"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="61dp"
                android:layout_height="42dp"
                android:layout_gravity="left"
                android:layout_marginLeft="211dp"
                android:background="@drawable/custombtn"
                android:drawableTop="@drawable/ic_baseline_arrow_forward_24"
                android:textColor="@color/colorWhite" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="Forgot Password?"
            android:textColor="#8F96BC"
            android:textSize="18sp"
            android:textStyle="bold" />

        <View
            android:layout_width="148dp"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="50dp"
            android:background="#8F96BC" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="155dp"
        android:layout_height="155dp"
        android:layout_marginTop="84dp"
        android:src="@drawable/scoollogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>